# colink-sdk-rust-dev

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: build.yml  check.yml  publish_to_crates.yml
examples/: auto_confirm.rs  get_next_greeting_message.rs  host_import_user.rs  host_import_users.rs  host_import_users_and_exchange_guest_jwts.rs  host_import_users_and_set_registry.rs  mtls_request_core_info.rs  mtls_request_info.rs  protocol_greetings.rs  protocol_greetings_with_init_func.rs  protocol_greetings_with_instant_server.rs  protocol_greetings_with_test.rs  protocol_variable_transfer.rs  protocol_variable_transfer_p2p.rs  storage_macro_chunk.rs  user_confirm_task.rs  user_generate_token.rs  user_greetings_to_multiple_users.rs  user_import_guest_jwt.rs  user_lock.rs  user_policy_module.rs  user_remote_storage.rs  user_run_local_task.rs  user_run_task.rs  user_start_protocol_operator.rs  user_stop_protocol_operator.rs  user_wait_task.rs
proto_ext/: remote_storage.proto
src/: application.rs  basic_a.rs  basic_p.rs  extensions.rs  lib.rs  protocol.rs  sdk_a.rs  sdk_p.rs  utils.rs
src/basic_p/: args.rs
src/extensions/: extension.rs  get_participant_id.rs  get_participant_index.rs  instant_server.rs  lock.rs  magic_mount.rs  policy_module.rs  read_or_wait.rs  registry.rs  remote_storage.rs  storage_macro.rs  switch_to_generated_user.rs  variable_transfer.rs  wait_task.rs  wait_user_init.rs
src/extensions/magic_mount/: chunk.rs
src/extensions/storage_macro/: append.rs  chunk.rs  db_redis.rs  dbc.rs  fs.rs  redis.rs  sql.rs
src/extensions/variable_transfer/: p2p_inbox.rs  remote_storage.rs  tls_utils.rs
src/sdk_p/: args.rs
tests/: download-server.sh  pull-and-build-server.sh  test_counter_with_lock.rs  test_example_protocol_greetings.rs  test_policy_module.rs  test_protocol_greetings.rs  test_protocol_variable_transfer.rs  test_remote_storage.rs  test_storage_macro.rs  test_storage_macro_dbc.rs  test_storage_macro_rdbc.rs  test_user_lock.rs  test_user_management.rs  test_user_remote_storage.rs
tests/common/: mod.rs
