[package]
name = "colink"
version = "0.2.3"
edition = "2021"
description = "CoLink Rust SDK"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/CoLearn-Dev"
documentation = "https://docs.rs/colink"
repository = "https://github.com/CoLearn-Dev/colink-sdk-rust-dev"

[dependencies]
async-trait = "0.1"
async-recursion = "1.0.0"
base64 = "0.13.0"
chrono = "0.4"
clap = { version = "4.0", features = ["derive", "env"] }
futures-lite = "1.12"
lapin = "2.1"
prost = "0.10"
rand = { version = "0.8.4", features = ["std_rng"] }
secp256k1 = { version = "0.21.2", features = ["rand-std"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tokio = { version = "1.18", features = ["macros", "rt-multi-thread", "rt", "fs"] }
tonic = { version = "0.7", features = ["tls", "tls-roots"] }
tracing = "0.1"
tracing-subscriber = "0.2"
uuid = { version = "0.8", features = ["v4"] }

[build-dependencies]
prost-build = "0.10"
tonic-build = "0.7"

[features]
default = ["extensions", "remote_storage", "variable_transfer", "registry", "policy_module", "instant_server", "magic_mount"]
extensions = []
remote_storage = ["extensions"]
variable_transfer = ["extensions", "remote_storage"]
registry = []
policy_module = []
instant_server = []
magic_mount = []
