[package]
name = "colink"
version = "0.3.6"
edition = "2021"
description = "CoLink Rust SDK"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/CoLearn-Dev"
documentation = "https://docs.rs/colink"
repository = "https://github.com/CoLearn-Dev/colink-sdk-rust-dev"

[dependencies]
async-recursion = { version = "1.0", optional = true }
async-trait = "0.1"
base64 = "0.13"
chrono = "0.4"
clap = { version = "4.0", features = ["derive", "env"] }
futures-lite = "1.12"
hyper = { version = "0.14", optional = true }
hyper-rustls = { version = "0.23", optional = true }
jsonwebtoken = { version = "7.2", optional = true }
lapin = "2.1"
prost = "0.10"
rand = { version = "0.8", features = ["std_rng"] }
rcgen = { version = "0.10", optional = true }
redis = { version = "0.22", features = ["tokio-comp"] }
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls-native-roots"], optional = true }
secp256k1 = { version = "0.25", features = ["rand-std"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tokio = { version = "1.24", features = ["macros", "rt-multi-thread", "rt", "fs"] }
tokio-rustls = { version = "0.23", optional = true }
tonic = { version = "0.7", features = ["tls", "tls-roots"] }
tracing = "0.1"
tracing-subscriber = "0.2"
url = "2.2"
uuid = { version = "0.8", features = ["v4"] }

[build-dependencies]
prost-build = "0.10"
tonic-build = "0.7"

[features]
default = ["extensions", "remote_storage", "variable_transfer", "registry", "policy_module", "instant_server", "storage_macro"]
extensions = []
remote_storage = ["extensions"]
variable_transfer = ["extensions", "remote_storage", "hyper", "jsonwebtoken", "rcgen", "tokio-rustls", "hyper-rustls"]
registry = []
policy_module = []
instant_server = ["reqwest"]
storage_macro = ["async-recursion"]
